# cuteserver

./: .editorconfig  .gitignore  .ninja_deps  .ninja_log  CMakeLists.txt  Dockerfile  Makefile  README.md  build.ninja  config.toml  cuteserver  run.sh
data/: error.html  index.html  script.js  style.css
data/cgi-bin/: cgi  cgi.c  first.c  hello.cgi  post.c
data/yeet/: package.json
data/yeet/cgi-bin/: hello.cgi
data/yeet/src/: App.jsx
example_app/: Dockerfile  config.toml
example_app/backend/: CMakeLists.txt  first.c  main.c  main.cgi
example_app/frontend/: index.html  package-lock.json
example_app/frontend/src/: App.jsx  index.css
prototype/: prototype.c
reports/final-report/: main.tex
reports/final-report/content/: 01_introduction.tex  02_background.tex  03_implementation.tex  04_results_discussion.tex  05_conclusion.tex  06_references.tex
reports/final_presentation/: presentation.tex
reports/initial-presentation/: presentation.tex
src/: cgi.c  cgi_handler.c  cgi_handler.h  config.c  config.h  main.c  main.c.orig  parser.c  parser.h  request.c  request.h  response.c  response.h  utils.c  utils.h
testing/: locustfile.py
testing/results/: cgi_2_threads_500_users_50_ramp.html  cgi_4_threads_500_users_50_ramp.html  static_2_threads_500_users_50_ramp.html  static_3_threads_500_users_50_ramp.html
